--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                         <!--Icon-->
                         <div class="contact-box-icon">
                             <i class="fa-solid fa-envelope"></i>
-                            <strong>Address</strong>
+                            <strong>Email ID - </strong>
                         </div>
                         <!--Details-->
                         <span>sridhar15062001@gmail.com</span>
