--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                     <!--btns-->
                     <div class="user-profile-btns">
-                        <a href="cv/Black and White Minimalist Accountant Resume.pdf" download target="_blank">Download CV</a>
+                        <a href="cv/Sridhar Resume.pdf" download target="_blank">Download CV</a>
                         <a href="#">Contact Me</a>
                     </div>
                 </div>
@@ -291,7 +291,7 @@
                         <!--Icon-->
                         <div class="contact-box-icon">
                             <i class="fa-solid fa-envelope"></i>
-                            <strong>Email ID - </strong>
+                            <strong>Email</strong>
                         </div>
                         <!--Details-->
                         <span>sridhar15062001@gmail.com</span>
