--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <!--About Me-->
             <section id="about-me" class="section-container">
                 <h3>Hello, I'm a <span id="role">Software Engineer</span></h3>
-                <h1>Software Engineer at Tech Mahindra, Chennai.</h1>
+                <h1>at Tech Mahindra, Chennai.</h1>
                 <p>
                     I'm a passionate Software Engineer focused on building robust, scalable applications. I love creating innovative solutions that elevate user experiences. My goal is to contribute to meaningful projects that push technology forward.
                 </p>
