--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h3>Hello, I'm a <span id="role">Software Engineer</span></h3>
                 <h1>at Tech Mahindra, Chennai.</h1>
                 <p>
-                    I'm a passionate Software Engineer focused on building robust, scalable applications. I love creating innovative solutions that elevate user experiences. My goal is to contribute to meaningful projects that push technology forward.
+                    I'm a passionate developer focused on building robust, scalable applications. I love creating innovative solutions that elevate user experiences. My goal is to contribute to meaningful projects that push technology forward.
                 </p>
             </section>
 
@@ -112,7 +112,7 @@
                             <strong>Software Engineer</strong>
                             <span class="edu-work-company">Tech Mahindra, Chennai</span>
                             <p>
-                                Delivered L1 on-call and production support for lava enterprise applications, ensuring high availability and timely incident resolution through log and code analysis. Analyze logs using Kibana/Grafana. Improved application stability by implementing minor fixes and JPA/MySQL enhancements, assisting in bug tracking. Supported controlled releases by preparing clear implementation and backout plans for deployments.
+                                Delivered L1 on-call and production support for java enterprise applications, ensuring high availability and timely incident resolution through log and code analysis. Analyze logs using Kibana/Grafana. Improved application stability by implementing minor fixes and JPA/MySQL enhancements, assisting in bug tracking. Supported controlled releases by preparing clear implementation and backout plans for deployments.
                             </p>
                         </div>
 
@@ -122,7 +122,7 @@
                             <strong>Associate Software Engineer</strong>
                             <span class="edu-work-company">Tech Mahindra, Chennai</span>
                             <p>
-                                Completed intensive training in Java Full Stack, gaining hands-on knowledge from core Java concepts, Spring Boot, JPA/Hibernate, MySQL, version control to enterprise application development, debugging and deployment workflows.
+                                Completed intensive training in Java Full Stack, gaining hands-on knowledge from core java concepts, Spring Boot, JPA/Hibernate, MySQL, version control to enterprise application development, debugging and deployment workflows.
                             </p>
                         </div>
                     </div>
