--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <!--btns-->
                     <div class="user-profile-btns">
                         <a href="cv/Sridhar Resume.pdf" download target="_blank">Download CV</a>
-                        <a href="#">Contact Me</a>
+                        <a href="#contact">Contact Me</a>
                     </div>
                 </div>
             </div>
